# ospf-protocol-attack

./: .gitignore  README.md  build.ps1  pyproject.toml
.claude/: settings.local.json
docker/topo1-single-area/: Dockerfile.attacker  docker-compose.yml
docs/superpowers/plans/: 2026-05-08-ospf-attack-plan.md  2026-05-11-gui-config-panel.md
docs/superpowers/specs/: 2026-05-08-ospf-attack-design.md  2026-05-11-gui-config-panel-design.md
ospf_attack/: __init__.py  __main__.py
ospf_attack/attacks/: base.py
ospf_attack/attacks/adjacency/: adjacency_break.py  dr_bdr_hijack.py  hello_inject.py
ospf_attack/attacks/dos/: db_overflow.py  (+2 more)
ospf_attack/cli/: commands.py  formatters.py  main.py
ospf_attack/config/: __init__.py  config.py  types.py
ospf_attack/core/: active_engine.py  arp_spoof.py  auth.py  event.py  lsa_db.py  neighbor.py  packet.py  router.py  sniffer.py
ospf_attack/gui/: __init__.py  app.py  attack_tree.py  config_form.py  log_panel.py  pcap_tools.py  runner.py  styles.py
ospf_attack/network/: adapter.py  sender.py
ospf_attack/npcap/: detector.py  installer.py
ospf_attack/utils/: __init__.py  logging.py  validators.py
tests/integration/: conftest.py  test_topology_attacks.py
tests/unit/: test_adjacency_break.py  test_arp_spoof.py  test_attack_base.py  test_auth.py  test_cli.py  test_config_types.py  test_dos_attacks.py  test_dr_bdr_hijack.py  test_gui_meta.py  test_hello_inject.py  test_lsa_attacks.py  test_neighbor.py  test_packet.py  test_protocol_attacks.py  test_sender.py  test_setup_logging.py  test_sniffer.py  test_validators.py
(+9 files in other folders)
